create questions using az ai service client changes

--- a/src/components/SearchBar.scss
+++ b/src/components/SearchBar.scss
@@ -7,7 +7,7 @@
     margin-bottom: 12px;
     padding-right: 8px;
 
-    border: $border-normal;
+    border: $border-light;
     border-radius: 8px;
 
     .search-input {
@@ -33,7 +33,7 @@
 
         background: white;
 
-        border: $border-normal;
+        border: $border-light;
         border-radius: 4px;
 
         max-height: 200px;
