--- a/src/pages/home/AdminHome.scss
+++ b/src/pages/home/AdminHome.scss
@@ -9,7 +9,7 @@
         padding: 8px;
 
         border-radius: 8px;
-        border: $border-normal;
+        border: $border-light;
 
         .user-search-bar {
             margin-top: 8px;
