--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -54,6 +54,7 @@
         &:disabled {
             color: $grey-300;
             cursor: not-allowed;
+            background-color: white;
         }
     }
 }
