--- a/src/components/DropdownMenu.scss
+++ b/src/components/DropdownMenu.scss
@@ -19,7 +19,7 @@
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
         border-radius: 4px;
-        border: $border-normal;
+        border: $border-light;
 
         &.left {
             top: 100%;
