--- a/src/pages/common/ChangePasswordForm.scss
+++ b/src/pages/common/ChangePasswordForm.scss
@@ -6,7 +6,7 @@
     padding: 8px;
 
     border-radius: 8px;
-    border: $border-normal;
+    border: $border-light;
 
     .msg {
         align-items: center;
