--- a/src/pages/topics/TopicListItem.scss
+++ b/src/pages/topics/TopicListItem.scss
@@ -7,7 +7,7 @@
     padding: 12px 8px;
     margin-bottom: 16px;
 
-    border: $border-normal;
+    border: $border-light;
     box-shadow: 0 0 7px 4px rgba(73, 73, 73, 0.1);
     border-radius: 8px;
 
